generate .html file

--- a/notebook/workbook.html
+++ b/notebook/workbook.html
@@ -7510,7 +7510,31 @@ a.anchor-link {
 </style>
 <!-- End of mermaid configuration --></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
-<main><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=bf2264d5-b6d3-447c-a0c8-d96b153ee819">
+<main>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=9b803657-54e9-40a6-8544-2dfb0e6267aa">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<div align="center">
+<h3><em>Workflow of Sentiment Anlayzer</em></h3>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=fb2a9d20-0561-4420-b786-33bbe9ce5a63">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p><code>Below is the end-to-end workflow that shows how to implement an NLP pipeline with FastText data and how to build an Machine learning model to predict sentiments.</code></p>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=bf2264d5-b6d3-447c-a0c8-d96b153ee819">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -9116,17 +9140,25 @@ e.g., Word2Vec training or stacking large NumPy arrays.</li>
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=a919239d-694f-4e49-847b-6f0f5865ced0">
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=68b0853f-0d48-422c-9686-060cc8f9d60e">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-<div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span> 
-</pre></div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<center>
+<h2 id="Connected-with-Me"><u>Connected with Me</u><a class="anchor-link" href="#Connected-with-Me">¶</a></h2><div style="font-family: 'Times New Roman', Times, serif; font-size: 16px; line-height: 2; text-align: center;">
+<a href="mailto:thisside.faisalkhan@example.com">Email Me</a><br/>
+<a href="https://www.linkedin.com/in/faisal-khan-332b882bb/">LinkedIn</a><br/>
+<a href="https://github.com/Faisal-khann">GitHub</a>
 </div>
+<br/>
+<div style="font-family: 'Times New Roman', Times, serif; font-size: 16px; padding: 12px;">
+    Made with <span style="color: #e25555;">❤️</span> by <strong>Faisal Khan</strong><br/>
+<span style="color: gray; font-size: 13px;">Powered by Jupyter Notebook</span>
+</div>
+</center>
 </div>
 </div>
 </div>
